--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "extractor": "./index.js"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "commander": "^2.12.2",
     "escape-string-regexp": "^1.0.5",
     "fs": "0.0.1-security",
